# go-bazel-example

./: .gitignore  BUILD.bazel  README.md  WORKSPACE
golang/hello_world/: BUILD.bazel  main.go
