# CODEINCLUDE-BEGIN-MARKER: getting-started-bazel-package
load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "./",
    visibility = ["//visibility:private"],
    deps = [
    ],
)

go_binary(
    name = "hello_world",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
